# cto-21

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
backend/: config.py  main.py  models.py  storage.py  trainer.py
data/: sample_data.csv
data_pipeline/: README.md  __init__.py  base.py  configs.py  registries.py  transforms.py
data_pipeline/loaders/: __init__.py  image_loader.py  tabular_loader.py  text_loader.py
examples/: DATA_PIPELINE.md  README.md  data_pipeline_demo.py  train_cnn.py
examples/data/: tabular_sample.csv  text_samples.jsonl
examples/data/configs/: image_config.json  tabular_config.json  text_config.json
examples/data/images/cat/: cat_2.ppm
examples/data/images/dog/: dog_1.ppm
ml_core/: __init__.py
ml_core/datasets/: __init__.py  loaders.py
ml_core/models/: __init__.py  factory.py
ml_core/training/: __init__.py  metrics.py  trainer.py
ml_core/utils/: __init__.py  metrics.py
tests/: test_data_pipeline.py  test_model_zoo.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.css  App.jsx  api.js
ui/src/components/: DatasetUploader.jsx  ModelSelector.jsx  TrainingMonitor.jsx
